@@ -232,6 +232,7 @@
         <string id="33330">No connection fromm a client was made !</string>
         <string id="33331">IPHONE-directory not found or writeable !</string> 
         <string id="33332">PSP-directory not found or writeable !</string>
+        <string id="33333">Default mkv needs bluray-functions</string> 
 
         # Warning : do not modify this id !!!!   
 
